<resources>
    <string name="app_name">Limpi</string>
    <string name="textorecuperarcontra">Te enviamos un correo con una nueva contraseña, escribela en el recuadro de abajo y cambiala por una contraseña nueva</string>
    <string name="firebase_error_login">Hubo un error</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="c_mo">¿Cómo podemos ayudarte?</string>
    <string name="open">Abierto</string>
    <string name="close">Cerrado</string>
    <string name="c_mo_podemos_ayudarte">¿Como podemos ayudarte?</string>
    <string name="facebook_app_id">265705191016979</string>
    <string name="fb_login_protocol_scheme">fb265705191016979</string>
    <string name="pedidos2"><b>Pedidos</b></string>
    <string name="membre"><b>Membresia</b></string>
    <string name="jos_de_la_mora_ampliaci_n_los_mgeles">José De la Mora, Ampliación los Ángeles</string>
    <string name="costura"><b>Costura</b></string>
    <string name="zapatosymas"><b>Zapatos y más.</b></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edita"><b>Edita tu perfil</b></string>
    <string name="mpagos"><b>Pagos</b></string>
    <string name="metodos"><b>Métodos de pago</b></string>
    <string name="escogemetodo">Elige un metodo de pago guardado o agrega uno nuevo</string>
    <string name="card">card</string>
    <string name="Cambiar">Cambiar</string>
    <string name="web_id__client">559812347088-6lts2cbcleo2mu1objme7igsskd51oat.apps.googleusercontent.com</string>
</resources>
